--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,7 @@
     --light-text-color: #F4F4FD;
     --secondary-accent-color: #404BBF;
     --border-color: #e7e9fc;
+    --light-border-color: #8E8F99;
 }
 
 html {
@@ -147,6 +148,14 @@ img {
     height: 600px;
 
     background-color: var(--title-text-color);
+    background-image: linear-gradient(to right,
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)),
+        url(../images/hero-img.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+
     text-align: center;
 }
 
@@ -216,6 +225,10 @@ img {
     /* margin-top: 120px; */
     padding: 120px 0;
 }
+
+/* .feature-icon {
+
+} */
 
 .feature-list {
     display: flex;
@@ -312,6 +325,17 @@ img {
     padding: 32px 16px;
 }
 
+.social-list {
+    display: flex;
+    gap: 24px;
+    margin-top: 8px;
+}
+
+.social-item .social-icon:hover,
+.social-item .social-icon:focus {
+    color: var(--secondary-accent-color);
+}
+
 .item {
     background-color: var(--primary-white-color);
 }
@@ -333,7 +357,22 @@ img {
     color: var(--light-text-color);
 }
 
+.client .section-title {
+    padding-bottom: 72px;
+}
+
+.client-list {
+    display: flex;
+    gap: 24px;
+}
+
+.client-list .feature-icon {
+    border: 1px solid var(--light-border-color);
+    border-radius: 4px;
+}
+
 footer {
+    display: flex;
     padding: 100px 0;
     height: 312px;
 
@@ -343,6 +382,28 @@ footer {
 .footer.link {
     display: inline-block;
     margin-bottom: 16px;
+}
+
+/* .footer .container {
+
+} */
+
+.footer .social-list {
+    margin-top: 0;
+}
+
+.footer-social {
+    display: block;
+    margin-left: 120px;
+}
+
+.footer-social-text {
+    color: var(--primary-white-color);
+
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
 }
 
 .buttons-list {
