--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,7 @@
     --secondary-accent-color: #404BBF;
     --border-color: #e7e9fc;
     --light-border-color: #8E8F99;
+    --bgc-color: #31d0aa;
 }
 
 html {
@@ -38,6 +39,9 @@ img {
 
 .main-header {
     border-bottom: 1px solid var(--border-color);
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+                0px 1px 1px rgba(46, 47, 66, 0.16),
+                0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 /* logo */
@@ -146,12 +150,10 @@ img {
 .hero {
     padding: 188px 0;
     height: 600px;
+    max-width: 1440px;
 
     background-color: var(--title-text-color);
-    background-image: linear-gradient(to right,
-        rgba(46, 47, 66, 0.7),
-        rgba(46, 47, 66, 0.7)),
-        url(../images/hero-img.jpg);
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/hero-img.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -226,9 +228,15 @@ img {
     padding: 120px 0;
 }
 
-/* .feature-icon {
-
-} */
+.icon-box {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 112px;
+    border-radius: 4px;
+    margin-bottom: 8px;
+    background-color: var(--light-text-color);
+}
 
 .feature-list {
     display: flex;
@@ -299,6 +307,10 @@ img {
 .team-list .item {
     width: calc((100%-72px)/4);
     border-radius: 0px 0px 4px 4px;
+
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+        0px 1px 1px rgba(46, 47, 66, 0.16),
+        0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .team-list .title {
@@ -325,16 +337,31 @@ img {
     padding: 32px 16px;
 }
 
+.social-links {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    background-color: var(--accent-color);
+    border-radius: 50%;
+}
+
+.social-links:hover,
+.social-links:focus {
+    background-color: var(--secondary-accent-color);
+}
+
 .social-list {
     display: flex;
     gap: 24px;
     margin-top: 8px;
+    justify-content: center;
 }
 
-.social-item .social-icon:hover,
-.social-item .social-icon:focus {
-    color: var(--secondary-accent-color);
-}
+
+
+
 
 .item {
     background-color: var(--primary-white-color);
@@ -358,7 +385,7 @@ img {
 }
 
 .client .section-title {
-    padding-bottom: 72px;
+    margin-bottom: 72px;
 }
 
 .client-list {
@@ -366,9 +393,30 @@ img {
     gap: 24px;
 }
 
-.client-list .feature-icon {
+.client-list .item {
+    height: 88px;
+}
+
+.client-list-link {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
     border: 1px solid var(--light-border-color);
     border-radius: 4px;
+
+    color: var(--light-border-color);
+}
+
+.client-list-link:hover,
+.client-list-link:focus {
+    border-color: var(--secondary-accent-color);
+    color: var(--secondary-accent-color);
+}
+
+.feature-icon {
+    fill: currentColor;
 }
 
 footer {
@@ -379,25 +427,56 @@ footer {
     background-color: var(--title-text-color);
 }
 
+.footer-text-box {
+    margin-right: 120px;
+}
+
 .footer.link {
     display: inline-block;
     margin-bottom: 16px;
 }
 
-/* .footer .container {
-
-} */
+.footer .container {
+    display: flex;
+}
 
 .footer .social-list {
-    margin-top: 0;
+    display: flex;
+    gap: 16px;
 }
 
 .footer-social {
-    display: block;
+    display: flex;
     margin-left: 120px;
 }
 
+.footer-social .social-list .social-item {
+    width: 40px;
+    height: 40px;
+}
+
+.footer-social-link {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    background-color: var(--accent-color);
+    border-radius: 50%;
+}
+
+.footer-social-link:hover,
+.footer-social-link:focus {
+    background-color: var(--bgc-color);
+}
+
+.footer-social-link .social-icon {
+    fill: var(--light-text-color);
+}
+
 .footer-social-text {
+    margin-bottom: 16px;
+
     color: var(--primary-white-color);
 
     font-weight: 500;
@@ -429,6 +508,9 @@ footer {
     color: var(--primary-white-color);
     background-color: var(--secondary-accent-color);
     border: 1px solid transparent;
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
+        0px 2px 1px rgba(0, 0, 0, 0.08),
+        0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .photo-list {
@@ -437,6 +519,17 @@ footer {
     width: 1128px;
     margin-left: auto;
     margin-right: auto;
+}
+
+.photo-list .item .link {
+    display: block;
+}
+
+.photo-list .item .link:hover,
+.photo-list .item .link:focus {
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+        0px 1px 1px rgba(46, 47, 66, 0.16),
+        0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .photo-list .item {
