--- a/css/styles.css
+++ b/css/styles.css
@@ -352,16 +352,18 @@ img {
     background-color: var(--secondary-accent-color);
 }
 
+.social-links .social-icon {
+    fill: var(--light-text-color);
+}
+
 .social-list {
     display: flex;
     gap: 24px;
     margin-top: 8px;
     justify-content: center;
+    width: 40px;
+    height: 40px;
 }
-
-
-
-
 
 .item {
     background-color: var(--primary-white-color);
@@ -394,6 +396,7 @@ img {
 }
 
 .client-list .item {
+    width: calc((100%-120px)/6);
     height: 88px;
 }
 
@@ -438,6 +441,7 @@ footer {
 
 .footer .container {
     display: flex;
+    align-items: baseline;
 }
 
 .footer .social-list {
