--- a/css/styles.css
+++ b/css/styles.css
@@ -361,6 +361,9 @@ img {
     gap: 24px;
     margin-top: 8px;
     justify-content: center;
+}
+
+.social-list .social-item {
     width: 40px;
     height: 40px;
 }
